# radio-paje-rust-web

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  hello.html  um.opus
radio-paje-rust-web/src/: lib.rs  main.rs
src/: auth.rs  handler.rs  lib.rs  listing.rs  main.rs
templates/: index.html  script.js
test/: integration.rs
