[package]
name = "radio-paje-rust-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
actix-web = "4"
actix-ws = "0.3.0"
askama = "0.12"
futures-util = "0.3.31"
log = "0.4.28"
mime = "0.3.17"
reqwest = "0.12.23"
tempfile = "3.23.0"
tokio = { version = "1", features = ["full"] }
