[package]
name = "radio-paje-rust-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
actix-web = "4"
actix-ws = "0.3.0"
askama = "0.12"
aws-config = "1.8.7"
aws-sdk-s3 = "1.107.0"
aws-smithy-http = "0.62.3"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.28"
mime = "0.3.17"
mime_guess = "2.0.5"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
tempfile = "3.23.0"
tokio = { version = "1", features = ["full"] }
