[package]
name = "radio-paje-rust-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
actix-web = "4"
askama = "0.12"
env_logger = "0.11.8"
log = "0.4.28"
mime_guess = "2.0.5"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["full"] }
